tests/lean/weirdmacro.lean.expected.out
weirdmacro.lean:1:6: error: expected no space before ':' or string literal
weirdmacro.lean:3:7-3:11: error: unknown identifier 'term'
