tests/lean/weirdmacro.lean
macro term x:term : term => `($x)

#check term 10
-- 10
